--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 /*  your css code here. If applicable */
+
+#name{
+    background-color: pink;
+}
+#email{
+    background-color: pink;
+}
+#phone{
+    background-color: pink;
+}
+button{
+    background-color: pink;
+}
